# pybaseball-MCP

./: .gitignore  CONTRIBUTING.md  Dockerfile  FIX_SUMMARY.md  INSTALL.md  LICENSE  QUICKSTART.md  README.md  check_status.sh  claude_desktop_config.json  docker-compose.yml  install.sh  pyproject.toml  requirements.txt  server.py  setup_github.sh  test_enum_lists.py  test_enum_mappings.py  test_enums.py  test_fixed_functions.py  test_pybaseball_direct.py  test_server.py
.github/workflows/: test.yml
tools/: __init__.py  player_tools.py  plotting_tools.py  stats_tools.py
utils/: __init__.py  chart_processor.py  data_processing.py  validation.py
utils/chart_display/: __init__.py  artifact_creator.py  chart_processor.py
